# WebEngine

./: .bettercodehub.yml  .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  COPYING  Makefile  README.md  ccompat.cpp  ccompat.hpp  cppcheck.out  engine  hooks.cpp  hooks.hpp  lgtm.yml  logger.cpp  logger.hpp  main.cpp  notes.c  options.cpp  options.hpp  tab.hpp  test.out  test.txt  valgrind.txt
.github/workflows/: build-test.yml  codeql-analysis.yml  spelling.yml
data/text/: named_characters.cpp  named_characters.hpp  unicode.hpp  ustring.cpp  ustring.hpp
data/text/encoding/: encoder_engine.cpp  encoder_engine.hpp  encoding.hpp  single_byte_encoding.cpp  single_byte_encoding.hpp  utf8.cpp  utf8.hpp
docs/: building.md  code-style.md  directory-structure.md  license.md  readme.md  testing.md
dom/: character_data.hpp  comment.hpp  document.hpp  document_type.hpp  element.hpp  element_internals.hpp  html_element.hpp  html_head_element.hpp  html_html_element.hpp  node.hpp  resettable_element.hpp
misc/: credits.cpp  credits.hpp
net/: alpn_protocols.hpp  connection_info.cpp  connection_info.hpp  connection_info_libtls.cpp  connection_info_openssl.cpp
net/http/: http_connection.cpp  http_connection.hpp  http_header_field.hpp  http_response_info.cpp  http_response_info.hpp
net/http2/: constants.hpp  frame.hpp  http2_connection.cpp  http2_connection.hpp
parser/css/: context.hpp  parse_error.hpp  parser.cpp  parser.hpp  preprocessor.cpp  preprocessor.hpp  rule.hpp  stylesheet.hpp  token.hpp  token_base.hpp  token_flag.hpp  token_type.hpp  tokenizer.cpp  tokenizer.hpp  tokenizer_algorithms.hpp  tokenizer_stream.cpp  tokenizer_stream.hpp
parser/css/token/: base.hpp  delim.hpp  hash.hpp  numeric.hpp
parser/html/: .tokenizer.cpp.kate-swp  constants.hpp  context.cpp  context.hpp  error.cpp  error.hpp  insertion_mode.cpp  insertion_mode.hpp  state.cpp  state.hpp  token.cpp  token.hpp  tokenizer.cpp  tokenizer.hpp  tokenizer_parser.hpp  tree_constructor.cpp  tree_constructor.hpp
parser/html/tokenizer/: after_attribute_name.cpp  after_attribute_name.hpp  after_attribute_value_quoted.cpp  after_attribute_value_quoted.hpp  after_doctype_name.cpp  after_doctype_name.hpp  after_doctype_public_identifier.cpp  after_doctype_public_identifier.hpp  after_doctype_public_keyword.cpp  after_doctype_public_keyword.hpp  after_doctype_system_identifier.cpp  after_doctype_system_identifier.hpp  after_doctype_system_keyword.cpp  after_doctype_system_keyword.hpp  attribute_name.cpp  attribute_name.hpp  attribute_value_dq.cpp  attribute_value_dq.hpp  attribute_value_nq.cpp  attribute_value_nq.hpp  attribute_value_sq.cpp  attribute_value_sq.hpp  before_attribute_name.cpp  before_attribute_name.hpp  before_attribute_value.cpp  before_attribute_value.hpp  before_doctype_name.cpp  before_doctype_name.hpp  before_doctype_public_identifier.cpp  before_doctype_public_identifier.hpp  before_doctype_system_identifier.cpp  before_doctype_system_identifier.hpp  between_doctype_public_system_identifier.cpp  between_doctype_public_system_identifier.hpp  bogus_doctype.cpp  bogus_doctype.hpp  character_reference.cpp  character_reference.hpp  comment.cpp  comment.hpp  (+43 more)
parser/html/tree/: insert_before_head.cpp  insert_before_head.hpp  insert_before_html.cpp  insert_before_html.hpp  insert_in_head.cpp  insert_in_head.hpp  insert_initial.cpp  insert_initial.hpp  insertion_mode.hpp
rendering/: input.hpp  render_bounds.hpp  render_object.hpp  renderer.hpp  view.hpp
rendering/drawables/: draw_color.hpp  draw_rect.hpp  draw_text.hpp
rendering/opengl/: gl_renderer.cpp  gl_renderer.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp
rendering/window/: window.hpp  window_glfw.cpp  window_glfw.hpp
resources/: document.hpp  media_type.hpp  mime.hpp  resource.hpp
src/: ccompat.cpp  ccompat.hpp  logger.cpp  logger.hpp  main.cpp  options.hpp
src/data/encoding/: encoding.hpp  utf8.cpp  utf8.hpp
src/data/text/: named_characters.hpp  unicode.hpp  ustring.cpp  ustring.hpp
src/data/text/encoding/: encoder_engine.cpp  encoder_engine.hpp  encoding.hpp  single_byte_encoding.cpp  single_byte_encoding.hpp  utf8.cpp  utf8.hpp
src/dom/: character_data.hpp  comment.hpp  document.hpp  element.hpp  node.hpp
src/net/: alpn_protocols.hpp  connection_info.cpp  connection_info.hpp  connection_info_libtls.cpp  global.hpp
src/net/http/: http_connection.cpp  http_connection.hpp  http_header_field.hpp  http_response_info.cpp  http_response_info.hpp
src/net/http2/: frame.hpp  http2_connection.cpp  http2_connection.hpp
src/parser/: characters.hpp
src/parser/html/: constants.hpp  context.cpp  context.hpp  error.cpp  error.hpp  insertion_mode.hpp  state.hpp  token.cpp  token.hpp  tokenizer.cpp  tokenizer.hpp  tree_constructor.cpp  tree_constructor.hpp
src/parser/html/tree/: insert_before_head.cpp  insert_before_head.hpp  insert_before_html.cpp  insert_before_html.hpp  insert_initial.cpp  insert_initial.hpp  insertion_mode.hpp
src/rendering/: render_bounds.hpp  render_object.hpp  renderer.hpp
src/rendering/drawables/: draw_rect.hpp
src/rendering/opengl/: gl_renderer.cpp  gl_renderer.hpp
src/rendering/window/: window.hpp  window_glfw.cpp  window_glfw.hpp  window_x11.cpp  window_x11.hpp
src/resources/: document.hpp  mime.hpp  resource.hpp
testing/: Makefile
testing/data/text/: unicode.cpp  ustring.cpp
testing/data/text/encoding/: utf8.cpp
testing/net/http/: http_connection.cpp  http_response_info.cpp
testing/parser/css/: parser.cpp  preprocessor.cpp  tokenizer.cpp  tokenizer_algorithms.cpp  tokenizer_consumecomments.cpp  tokenizer_consumeescapedcodepoint.cpp  tokenizer_consumeidentliketoken.cpp  tokenizer_consumename.cpp  tokenizer_consumenumber.cpp  tokenizer_consumenumerictoken.cpp  tokenizer_consumeremnantsofbadurl.cpp  tokenizer_consumestringtoken.cpp  tokenizer_consumetoken.cpp  tokenizer_consumeurltoken.cpp  tokenizer_convertstringtonumber.cpp  tokenizer_functions.cpp  tokenizer_stream.cpp
testing/parser/html/: token.cpp
tools/: build-fast.sh  formatter.sh  style_linter.py
